# vibe-os

./: .env.example  .gitignore  .plan-on-demand-thread-fetch.md  Cargo.toml  DESIGN.md  README.md  REGISTER_WITH_LOCAL_CADDY.md  flake.nix  install-service
.cursor/skills/linear-issue-management/: SKILL.md  template-reference.md
crates/arrow_store/: Cargo.toml
crates/arrow_store/src/: lib.rs
crates/core_model/: Cargo.toml
crates/core_model/src/: adapters.rs  arrow.rs  domain.rs  event.rs  lib.rs  operator.rs  time.rs
crates/core_operators/: Cargo.toml
crates/core_operators/src/: lib.rs
crates/core_persona/: Cargo.toml
crates/core_persona/src/: identity.rs  lib.rs  persona.rs  provider.rs  store.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: lib.rs
crates/dashboard_api/: Cargo.toml
crates/dashboard_api/src/: error.rs  lib.rs  state.rs  timeline_cache.rs  utils.rs
crates/dashboard_api/src/routes/: arrows.rs  events.rs  identities.rs  linear.rs  mod.rs  operators.rs  search.rs  slack.rs  sync.rs
crates/dashboard_api/src/search/: mod.rs  schema.rs  service.rs  tasks.rs  text.rs
crates/domain_adapters/: Cargo.toml
crates/domain_adapters/src/: lib.rs  linear.rs  provider.rs  slack.rs
crates/domain_adapters/src/linear/: mod.rs  parser.rs  transform.rs
crates/vibeos_cli/: Cargo.toml
crates/vibeos_cli/src/: app.rs  config.rs  dashboard.rs  easy_send.rs  lib.rs  linear.rs  linear_sync.rs  llm.rs  main.rs  slack.rs
crates/vibeos_cli/src/commands/: linear.rs  llm.rs  mod.rs  serve.rs  setup.rs  slack.rs
crates/vibeos_cli/src/haskllm/: fallback.rs  mod.rs  openai.rs  pandoc_chat.rs  phony.rs  vllm.rs
crates/vibeos_cli/src/haskllm/fallback/: config.rs  mod.rs  strategy.rs
crates/vibeos_cli/src/haskllm/openai/: client.rs  mod.rs  payload.rs
crates/vibeos_cli/src/haskllm/vllm/: client.rs  mod.rs  payload.rs
crates/vibeos_cli/src/linear_analysis/: loaders.rs  metrics.rs  mod.rs  types.rs
crates/vibeos_cli/src/linear_sync/: mod.rs  models.rs  queries.rs  storage.rs  transform.rs
crates/vibeos_cli/src/llm/: client.rs  formatting.rs  mod.rs  prompts.rs  types.rs
crates/vibeos_cli/src/slack/: api.rs  client.rs  fap.rs  mirror.rs  mod.rs  storage.rs  types.rs
crates/vibeos_cli/src/support/: fs.rs  io.rs  llm.rs  mod.rs  print.rs  time.rs
dashboard/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/e2e/: sse-streaming.spec.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/layout/: AppShell.tsx
dashboard/src/components/timeline/: TimelineEntryList.tsx  types.ts
dashboard/src/components/timeline/entries/: ActorChip.tsx  EventEntry.tsx  LinearThreadPreview.tsx  SlackThreadPreview.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  table.tsx
dashboard/src/features/linear/: index.ts  logic.ts  types.ts  useLinearDashboard.ts
dashboard/src/pages/: ArrowsPage.tsx  IdentitiesPage.tsx  IdentityProfilePage.tsx  LinearDashboardPage.tsx  OperatorsPage.tsx  SettingsPage.tsx  TimelinePage.tsx
dashboard/src/pages/identities/: constants.ts  types.ts
dashboard/src/pages/timeline/: adapters.ts  dataSource.ts  threadUtils.ts
dashboard/src/types/: core.ts  search.ts
priv/: getting_rid_of_data_leaks_in_git_without_bfg.md  slack_app_manifest.yaml
priv/examples/: easy-send-example.yaml  easy-update-example.yaml  shorthand-format.yaml  verbose-format.yaml
priv/haskllm-reference/src/: HaskLLM.hs
priv/haskllm-reference/src/HaskLLM/: FallbackLLM.hs  PandocChat.hs  Phony.hs
priv/scripts/: linear-cycle-issues.sh  linear-cycle-report.sh  linear-report.py  start-dev.sh  stop-dev.sh
src/: config.rs  lib.rs  linear.rs  linear_analysis.rs  linear_sync.rs  llm.rs  main.rs  setup.rs  slack.rs
src/haskllm/: pandoc_chat.rs
(+17 files in other folders)
