[package]
name = "slack_linear_tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "slack_linear_tools"
path = "src/lib.rs"

[[bin]]
name = "slack-linear"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
open = "5"
anyhow = "1.0"
thiserror = "1.0"

