[workspace]
members = [
    "crates/vibeos_cli",
    "crates/core_model",
    "crates/domain_adapters",
    "crates/core_operators",
    "crates/arrow_store",
    "crates/dashboard_api",
    "crates/core_persona",
    "crates/core_types",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

