[package]
name = "core_persona"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
core_types = { path = "../core_types" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true }

