[package]
name = "domain_adapters"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
core_model = { path = "../core_model" }
serde = { workspace = true }
serde_json = { workspace = true }
core_persona = { path = "../core_persona" }
tracing = { workspace = true }
